# Visual-Inertial-Odometry

./: .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  IMPLEMENTATION_PLAN.md  README.md
core/: CMakeLists.txt
core/include/vio/: data_loader.h  ekf_estimator.h  feature_tracker.h  imu_integrator.h  pipeline.h  triangulation.h  types.h
core/src/: data_loader.cpp  ekf_estimator.cpp  feature_tracker.cpp  imu_integrator.cpp  pipeline.cpp  triangulation.cpp
desktop/: CMakeLists.txt
desktop/include/: visualizer.h
desktop/src/: main.cpp  visualizer.cpp
test/: CMakeLists.txt  test_data_loader.cpp  test_ekf_estimator.cpp  test_feature_tracker.cpp  test_imu_integrator.cpp  test_triangulation.cpp
test/test_data/: cam0_data.csv  groundtruth.csv  imu_data.csv  sensor.yaml
